logos mobile version

--- a/index.html
+++ b/index.html
@@ -59,6 +59,38 @@
           />
         </div>
       </section>
+      <section class="grid-container">
+        <div>
+          <img
+            src="/midtermproject/project-assets/logos/airbnb-logo.svg"
+            alt="airbnb logo"
+          />
+        </div>
+        <div>
+          <img
+            src="/midtermproject/project-assets/logos/google-logo.svg"
+            alt="google logo"
+          />
+        </div>
+        <div>
+          <img
+            src="/midtermproject/project-assets/logos/microsoft-logo.svg"
+            alt="microsoft logo"
+          />
+        </div>
+        <div>
+          <img
+            src="/midtermproject/project-assets/logos/fedex-logo.svg"
+            alt="fedex logo"
+          />
+        </div>
+        <div>
+          <img
+            class="only-desktop"
+            src="/midtermproject/project-assets/logos/amazon-logo.svg"
+          />
+        </div>
+      </section>
     </div>
   </body>
 </html>
