hero absolute and relative

--- a/index.html
+++ b/index.html
@@ -59,36 +59,46 @@
           />
         </div>
       </section>
-      <section class="grid-container">
-        <div>
-          <img
-            src="/midtermproject/project-assets/logos/airbnb-logo.svg"
-            alt="airbnb logo"
-          />
+      <section>
+        <div class="grid-container">
+          <div>
+            <img
+              src="/midtermproject/project-assets/logos/airbnb-logo.svg"
+              alt="airbnb logo"
+            />
+          </div>
+          <div>
+            <img
+              src="/midtermproject/project-assets/logos/google-logo.svg"
+              alt="google logo"
+            />
+          </div>
+          <div>
+            <img
+              src="/midtermproject/project-assets/logos/microsoft-logo.svg"
+              alt="microsoft logo"
+            />
+          </div>
+          <div>
+            <img
+              src="/midtermproject/project-assets/logos/fedex-logo.svg"
+              alt="fedex logo"
+            />
+          </div>
+          <div>
+            <img
+              class="only-desktop"
+              src="/midtermproject/project-assets/logos/amazon-logo.svg"
+            />
+          </div>
         </div>
+      </section>
+      <section>
+        <h2>Recent Projects</h2>
         <div>
-          <img
-            src="/midtermproject/project-assets/logos/google-logo.svg"
-            alt="google logo"
-          />
-        </div>
-        <div>
-          <img
-            src="/midtermproject/project-assets/logos/microsoft-logo.svg"
-            alt="microsoft logo"
-          />
-        </div>
-        <div>
-          <img
-            src="/midtermproject/project-assets/logos/fedex-logo.svg"
-            alt="fedex logo"
-          />
-        </div>
-        <div>
-          <img
-            class="only-desktop"
-            src="/midtermproject/project-assets/logos/amazon-logo.svg"
-          />
+          <img src="/midtermproject/project-assets/projects-section/1.jpg" />
+          <h3></h3>
+          <p></p>
         </div>
       </section>
     </div>
