--- a/index.html
+++ b/index.html
@@ -95,10 +95,34 @@
       </section>
       <section>
         <h2>Recent Projects</h2>
-        <div>
-          <img src="/midtermproject/project-assets/projects-section/1.jpg" />
-          <h3></h3>
-          <p></p>
+        <div class="card-container">
+          <div class="card">
+            <img
+              class="img-project"
+              src="/midtermproject/project-assets/projects-section/1.jpg"
+            />
+            <h3>Simplify</h3>
+            <p>UI Design & App Development</p>
+            <a href="">Learn more</a>
+          </div>
+          <div class="card">
+            <img
+              class="img-project"
+              src="/midtermproject/project-assets/projects-section/2.jpg"
+            />
+            <h3>Dashcoin</h3>
+            <p>Web Development</p>
+            <a href="">Learn more</a>
+          </div>
+          <div class="card">
+            <img
+              class="img-project"
+              src="/midtermproject/project-assets/projects-section/3.jpg"
+            />
+            <h3>Vectorify</h3>
+            <p>User Experience Design</p>
+            <a href="">Learn more</a>
+          </div>
         </div>
       </section>
     </div>
