--- a/index.html
+++ b/index.html
@@ -125,6 +125,112 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="box-container">
+          <h3>Hear What Our Clients Have To Say</h3>
+          <p>"Circle helped us through every stage of our startup."</p>
+          <p>We really enjoyed working with you."</p>
+
+          <div class="client">
+            <img
+              id="client-img"
+              alt="client image"
+              src="/midtermproject/project-assets/testimonial-section/profile.png"
+            />
+
+            <div class="client-info">
+              <p id="Kristin">Kristin Watson</p>
+              <p id="Booking">Booking.com</p>
+            </div>
+          </div>
+
+          <div>
+            <img
+              id="emoji-top-left"
+              src="/midtermproject/project-assets/testimonial-section/memoji-1.png"
+            />
+          </div>
+          <div>
+            <img
+              id="emoji-top-right"
+              src="/midtermproject/project-assets/testimonial-section/memoji-2.png"
+            />
+          </div>
+          <div>
+            <img
+              id="emoji-bottom-left"
+              src="/midtermproject/project-assets/testimonial-section/memoji-3.png"
+            />
+          </div>
+          <div>
+            <img
+              id="emoji-bottom-right"
+              src="/midtermproject/project-assets/testimonial-section/memoji-4.png"
+            />
+          </div>
+        </div>
+      </section>
+      <section>
+        <div>
+          <h1>Our Services</h1>
+          <div class="services-container">
+            <div class="card-services">
+              <img
+                class="icon-services"
+                src="/midtermproject/project-assets/services-section/icons/1.svg"
+              />
+              <div class="card-text">
+                <div class="service-title">User Interface Design</div>
+                <div class="service-text">
+                  Circle provides you with a stunning user interface design that
+                  is accessible to everyone.
+                </div>
+                <div>
+                  <a class="link-services" href="#" class="service-link"
+                    >Learn More</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="card-services">
+              <img
+                class="icon-services"
+                src="/midtermproject/project-assets/services-section/icons/2.svg"
+              />
+              <div class="card-text">
+                <div class="service-title">User Experience Design</div>
+                <div class="service-text">
+                  Circle provides you with a stunning user interface design that
+                  is accessible to everyone.
+                </div>
+                <div>
+                  <a class="link-services" href="#" class="service-link"
+                    >Learn More</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="card-services">
+              <img
+                class="icon-services"
+                src="/midtermproject/project-assets/services-section/icons/3.svg"
+              />
+              <div class="card-text">
+                <div class="service-title">Application Development</div>
+                <div class="service-text">
+                  Circle provides you with a stunning user interface design that
+                  is accessible to everyone.
+                </div>
+                <div>
+                  <a class="link-services" href="#" class="service-link"
+                    >Learn More</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
