--- a/index.html
+++ b/index.html
@@ -45,18 +45,18 @@
           </div>
         </div>
         <div id="hero-imgs">
-          <img
-            id="hero-img"
-            src="/midtermproject/project-assets/hero-section/hero-image.png"
-          />
-          <img
-            id="hero-card-1"
-            src="/midtermproject/project-assets/hero-section/card-1.png"
-          />
-          <img
-            id="hero-card-2"
-            src="/midtermproject/project-assets/hero-section/card-2.png"
-          />
+          <div id="container-card1">
+            <img
+              id="hero-card-1"
+              src="/midtermproject/project-assets/hero-section/card-1.png"
+            />
+          </div>
+          <div id="container-card2">
+            <img
+              id="hero-card-2"
+              src="/midtermproject/project-assets/hero-section/card-2.png"
+            />
+          </div>
         </div>
       </section>
       <section>
@@ -125,11 +125,13 @@
           </div>
         </div>
       </section>
-      <section>
+      <section id="grey-box">
         <div class="box-container">
           <h3>Hear What Our Clients Have To Say</h3>
-          <p>"Circle helped us through every stage of our startup."</p>
-          <p>We really enjoyed working with you."</p>
+          <p>
+            "Circle helped us through every stage of our startup. <br />
+            We really enjoyed working with you."
+          </p>
 
           <div class="client">
             <img
@@ -172,7 +174,7 @@
       </section>
       <section>
         <div>
-          <h1>Our Services</h1>
+          <h1 class="projects-heading">Our Services</h1>
           <div class="services-container">
             <div class="card-services">
               <img
@@ -228,6 +230,40 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div id="mail-container">
+          <h1>Do you have any questions?</h1>
+
+          <div class="body-20">Let us help you!</div>
+          <form id="email-form">
+            <input
+              type="email"
+              name="email"
+              id="email_input"
+              placeholder="Enter your email"
+            />
+            <input id="submit" type="submit" value="Subscribe" />
+          </form>
+        </div>
+      </section>
+      <section>
+        <div id="footer-container">
+          <div id="footer-info">
+            <img src="/midtermproject/project-assets/logos/circle.svg" />
+            <div id="address">
+              <p>2972 Westheimer Rd. Santa Ana, Illinois 85486</p>
+            </div>
+          </div>
+          <div id="footer-links">
+            <a href="#" class="footer-link">Team</a>
+            <a href="#" class="footer-link">Services</a>
+            <a href="#" class="footer-link">About Us</a>
+            <a href="#" class="footer-link">Press</a>
+            <a href="#" class="footer-link">Projects</a>
+            <a href="#" class="footer-link">Privacy Policy</a>
           </div>
         </div>
       </section>
