--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <section id="contact_section">
         <div id="mail-container">
           <h1>Do you have any questions?</h1>
 
