--- a/index-projects.html
+++ b/index-projects.html
@@ -74,6 +74,41 @@
           </div>
         </article>
       </section>
+
+      <section>
+        <h3>Other Projects</h3>
+        <div class="card-container">
+          <div class="card">
+            <img
+              class="img-project"
+              src="/midtermproject/project-assets/projects-section/4.jpg"
+            />
+            <div class="body-24">Dashcoin</div>
+            <p>UI Design</p>
+            <a href="">Learn more</a>
+          </div>
+
+          <div class="card">
+            <img
+              class="img-project"
+              src="/midtermproject/project-assets/projects-section/5.jpg"
+            />
+            <div class="body-24">Vectorify</div>
+            <p>User Experience Design</p>
+            <a href="">Learn more</a>
+          </div>
+
+          <div class="card">
+            <img
+              class="img-project"
+              src="/midtermproject/project-assets/projects-section/4.jpg"
+            />
+            <div class="body-24">Orbit</div>
+            <p>UI Design</p>
+            <a href="">Learn more</a>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
