--- a/index-projects.html
+++ b/index-projects.html
@@ -109,6 +109,40 @@
           </div>
         </div>
       </section>
+      <section id="contact_section">
+        <div id="mail-container">
+          <h1>Do you have any questions?</h1>
+
+          <div class="body-20">Let us help you!</div>
+          <form id="email-form">
+            <input
+              type="email"
+              name="email"
+              id="email_input"
+              placeholder="Enter your email"
+            />
+            <input id="submit" type="submit" value="Subscribe" />
+          </form>
+        </div>
+      </section>
+      <section>
+        <div id="footer-container">
+          <div id="footer-info">
+            <img src="/midtermproject/project-assets/logos/circle.svg" />
+            <div id="address">
+              <p>2972 Westheimer Rd. Santa Ana, Illinois 85486</p>
+            </div>
+          </div>
+          <div id="footer-links">
+            <a href="#" class="footer-link">Team</a>
+            <a href="#" class="footer-link">Services</a>
+            <a href="#" class="footer-link">About Us</a>
+            <a href="#" class="footer-link">Press</a>
+            <a href="#" class="footer-link">Projects</a>
+            <a href="#" class="footer-link">Privacy Policy</a>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
