--- a/index.html
+++ b/index.html
@@ -252,9 +252,13 @@
       <section>
         <div id="footer-container">
           <div id="footer-info">
-            <img src="/midtermproject/project-assets/logos/circle.svg" />
+            <img
+              id="circle-logo"
+              src="/midtermproject/project-assets/logos/circle.svg"
+            />
             <div id="address">
-              <p>2972 Westheimer Rd. Santa Ana, Illinois 85486</p>
+              <p>2972 Westheimer Rd. Santa Ana,</p>
+              <p>Illinois 85486</p>
             </div>
           </div>
           <div id="footer-links">
