--- a/contact.html
+++ b/contact.html
@@ -35,13 +35,15 @@
             <label for="name">Full name*</label>
             <input type="text" id="name" placeholder="Enter your full name" />
           </div>
-          <div class="form-field">
-            <label for="email">Email</label>
-            <input type="email" id="email" placeholder="Enter your email" />
-          </div>
-          <div class="form-field">
-            <label for="phone">Phone</label>
-            <input type="tel" id="phone" placeholder="Enter your phone" />
+          <div id="mail-phone-container">
+            <div class="form-field">
+              <label for="email">Email</label>
+              <input type="email" id="email" placeholder="Enter your email" />
+            </div>
+            <div class="form-field">
+              <label for="phone">Phone</label>
+              <input type="tel" id="phone" placeholder="Enter your phone" />
+            </div>
           </div>
           <div class="form-field">
             <label>Message</label>
