--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
             <label>Message</label>
             <textarea placeholder="Write your message here..."></textarea>
           </div>
-          <input type="submit" value="Submit" />
+          <input id="submit-form" type="submit" value="Submit" />
         </form>
       </section>
     </div>
