--- a/contact.html
+++ b/contact.html
@@ -17,12 +17,12 @@
   <body>
     <div id="page">
       <section class="topnav">
-        <a href="#home" class="active">
+        <a href="index.html" class="active">
           <img src="/midtermproject/project-assets/logos/circle.svg"
         /></a>
 
         <div id="navbar-menu">
-          <a id="home-nav" href="#home">Home</a>
+          <a id="home-nav" href="index.html">Home</a>
           <a href="#projects">Projects</a>
           <a href="#services">Services</a>
         </div>
