--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <a href="#projects">Projects</a>
           <a href="#services">Services</a>
         </div>
-        <button id="contact">Contact Us</button>
+        <button id="contact"><a href="contact.html">Contact Us</a></button>
       </section>
       <section id="hero">
         <div id="hero-text">
