--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
               id="email_input"
               placeholder="Enter your email"
             />
-            <input id="submit" type="submit" value="Subscribe" />
+            <input id="submit" type="button" value="Subscribe" />
           </form>
         </div>
       </section>
