--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
     <title>Contact</title>
   </head>
-  <body>
+  <body onload="initContactPage()">
     <div id="page">
       <section class="topnav">
         <a href="index.html" class="active">
@@ -49,9 +49,10 @@
             <label>Message</label>
             <textarea placeholder="Write your message here..."></textarea>
           </div>
-          <input id="submit-form" type="submit" value="Submit" />
+          <input id="submit-form" type="button" value="Submit" />
         </form>
       </section>
     </div>
+    <script src="/midtermproject/index.js"></script>
   </body>
 </html>
