--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <title>Midterm Project</title>
   </head>
-  <body>
+  <body onload="initMainPage()">
     <div id="page">
       <section class="topnav">
         <a href="#home" class="active">
