--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,7 @@
           <div class="form-field">
             <label for="name">Full name*</label>
             <input type="text" id="name" placeholder="Enter your full name" />
+            <div id="name-error" class="error">Please fill in this field</div>
           </div>
           <div id="mail-phone-container">
             <div class="form-field">
@@ -46,8 +47,12 @@
             </div>
           </div>
           <div class="form-field">
-            <label>Message</label>
-            <textarea placeholder="Write your message here..."></textarea>
+            <label>Message*</label>
+            <textarea
+              id="message"
+              placeholder="Write your message here..."
+            ></textarea>
+            <div id="msg-error" class="error">Please fill in this field</div>
           </div>
           <input id="submit-form" type="button" value="Submit" />
         </form>
