link project page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div id="navbar-menu">
           <a id="home-nav" href="#home">Home</a>
-          <a href="#projects">Projects</a>
+          <a href="index-projects.html">Projects</a>
           <a href="#services">Services</a>
         </div>
         <button id="contact"><a href="contact.html">Contact Us</a></button>
@@ -103,7 +103,7 @@
             />
             <h3>Simplify</h3>
             <p>UI Design & App Development</p>
-            <a href="">Learn more</a>
+            <a href="index-projects.html">Learn more</a>
           </div>
           <div class="card">
             <img
@@ -112,7 +112,7 @@
             />
             <h3>Dashcoin</h3>
             <p>Web Development</p>
-            <a href="">Learn more</a>
+            <a href="index-projects.html">Learn more</a>
           </div>
           <div class="card">
             <img
@@ -121,7 +121,7 @@
             />
             <h3>Vectorify</h3>
             <p>User Experience Design</p>
-            <a href="">Learn more</a>
+            <a href="index-projects.html">Learn more</a>
           </div>
         </div>
       </section>
@@ -188,7 +188,10 @@
                   is accessible to everyone.
                 </div>
                 <div>
-                  <a class="link-services" href="#" class="service-link"
+                  <a
+                    class="link-services"
+                    href="index-projects.html"
+                    class="service-link"
                     >Learn More</a
                   >
                 </div>
@@ -206,9 +209,7 @@
                   is accessible to everyone.
                 </div>
                 <div>
-                  <a class="link-services" href="#" class="service-link"
-                    >Learn More</a
-                  >
+                  <a href="" class="link-services">Learn Morekkk</a>
                 </div>
               </div>
             </div>
@@ -224,7 +225,7 @@
                   is accessible to everyone.
                 </div>
                 <div>
-                  <a class="link-services" href="#" class="service-link"
+                  <a class="link-services" href="index-projects.html"
                     >Learn More</a
                   >
                 </div>
