--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 
         <div id="navbar-menu">
           <a id="home-nav" href="index.html">Home</a>
-          <a href="#projects">Projects</a>
+          <a href="index-projects.html">Projects</a>
           <a href="#services">Services</a>
         </div>
         <button id="contact">Contact Us</button>
