--- a/index-projects.html
+++ b/index-projects.html
@@ -25,7 +25,7 @@
         /></a>
 
         <div id="navbar-menu">
-          <a id="home-nav" href="#home">Home</a>
+          <a id="home-nav" href="index.html">Home</a>
           <a href="#projects">Projects</a>
           <a href="#services">Services</a>
         </div>
