--- a/index.html
+++ b/index.html
@@ -26,9 +26,17 @@
         /></a>
 
         <div id="navbar-menu">
-          <a id="home-nav" href="#home">Home</a>
-          <a href="index-projects.html">Projects</a>
-          <a href="#services">Services</a>
+          <div class="navbar-desktop">
+            <a id="home-nav" href="#home">Home</a>
+            <a href="index-projects.html">Projects</a>
+            <a href="#services">Services</a>
+          </div>
+          <div class="hamburger">
+            <i class="fas fa-bars"></i>
+            <span class="bar">Home</span>
+            <span class="bar">Projects</span>
+            <span class="bar">Services</span>
+          </div>
         </div>
         <button id="contact"><a href="contact.html">Contact Us</a></button>
       </section>
