--- a/index.html
+++ b/index.html
@@ -31,21 +31,22 @@
 
         <div id="navbar-menu">
           <div class="navbar-desktop">
-            <a id="home-nav" href="#home">Home</a>
+            <a class="home-nav" href="#home">Home</a>
             <a href="index-projects.html">Projects</a>
             <a href="#services">Services</a>
           </div>
           <div class="hamburger">
             <i class="fa-solid fa-bars"></i>
-            <div class="hamburger-links">
-              <span class="bar">Home</span>
-              <span class="bar">Projects</span>
-              <span class="bar">Services</span>
-            </div>
           </div>
         </div>
+
         <button id="contact"><a href="contact.html">Contact Us</a></button>
       </section>
+      <div class="hamburger-links">
+        <a class="home-nav" href="#home">Home</a>
+        <a href="index-projects.html">Projects</a>
+        <a href="#services">Services</a>
+      </div>
       <section id="hero">
         <div id="hero-text">
           <h1>Empower Your Business With Stunning Design!</h1>
