--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
             />
             <input id="submit" type="button" value="Subscribe" />
           </form>
+          <div class="error" id="field-error">Please, fill in this field</div>
         </div>
       </section>
       <section>
