--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/midtermproject/index.css" />
+    <link rel="stylesheet" href="index.css" />
 
     <link
       rel="stylesheet"
@@ -26,7 +26,7 @@
     <div id="page">
       <section class="topnav">
         <a href="#home" class="active">
-          <img src="/midtermproject/project-assets/logos/circle.svg"
+          <img src="/project-assets/logos/circle.svg"
         /></a>
 
         <div id="navbar-menu">
@@ -63,13 +63,13 @@
           <div id="container-card1">
             <img
               id="hero-card-1"
-              src="/midtermproject/project-assets/hero-section/card-1.png"
+              src="project-assets/hero-section/card-1.png"
             />
           </div>
           <div id="container-card2">
             <img
               id="hero-card-2"
-              src="/midtermproject/project-assets/hero-section/card-2.png"
+              src="project-assets/hero-section/card-2.png"
             />
           </div>
         </div>
@@ -78,32 +78,32 @@
         <div class="grid-container">
           <div>
             <img
-              src="/midtermproject/project-assets/logos/airbnb-logo.svg"
+              src="project-assets/logos/airbnb-logo.svg"
               alt="airbnb logo"
             />
           </div>
           <div>
             <img
-              src="/midtermproject/project-assets/logos/google-logo.svg"
+              src="project-assets/logos/google-logo.svg"
               alt="google logo"
             />
           </div>
           <div>
             <img
-              src="/midtermproject/project-assets/logos/microsoft-logo.svg"
+              src="project-assets/logos/microsoft-logo.svg"
               alt="microsoft logo"
             />
           </div>
           <div>
             <img
-              src="/midtermproject/project-assets/logos/fedex-logo.svg"
+              src="project-assets/logos/fedex-logo.svg"
               alt="fedex logo"
             />
           </div>
           <div>
             <img
               class="only-desktop"
-              src="/midtermproject/project-assets/logos/amazon-logo.svg"
+              src="project-assets/logos/amazon-logo.svg"
             />
           </div>
         </div>
@@ -114,7 +114,7 @@
           <div class="card">
             <img
               class="img-project"
-              src="/midtermproject/project-assets/projects-section/1.jpg"
+              src="project-assets/projects-section/1.jpg"
             />
             <h3>Simplify</h3>
             <p>UI Design & App Development</p>
@@ -123,7 +123,7 @@
           <div class="card">
             <img
               class="img-project"
-              src="/midtermproject/project-assets/projects-section/2.jpg"
+              src="project-assets/projects-section/2.jpg"
             />
             <h3>Dashcoin</h3>
             <p>Web Development</p>
@@ -132,7 +132,7 @@
           <div class="card">
             <img
               class="img-project"
-              src="/midtermproject/project-assets/projects-section/3.jpg"
+              src="project-assets/projects-section/3.jpg"
             />
             <h3>Vectorify</h3>
             <p>User Experience Design</p>
@@ -152,7 +152,7 @@
             <img
               id="client-img"
               alt="client image"
-              src="/midtermproject/project-assets/testimonial-section/profile.png"
+              src="project-assets/testimonial-section/profile.png"
             />
 
             <div class="client-info">
@@ -164,25 +164,25 @@
           <div>
             <img
               id="emoji-top-left"
-              src="/midtermproject/project-assets/testimonial-section/memoji-1.png"
+              src="project-assets/testimonial-section/memoji-1.png"
             />
           </div>
           <div>
             <img
               id="emoji-top-right"
-              src="/midtermproject/project-assets/testimonial-section/memoji-2.png"
+              src="project-assets/testimonial-section/memoji-2.png"
             />
           </div>
           <div>
             <img
               id="emoji-bottom-left"
-              src="/midtermproject/project-assets/testimonial-section/memoji-3.png"
+              src="project-assets/testimonial-section/memoji-3.png"
             />
           </div>
           <div>
             <img
               id="emoji-bottom-right"
-              src="/midtermproject/project-assets/testimonial-section/memoji-4.png"
+              src="project-assets/testimonial-section/memoji-4.png"
             />
           </div>
         </div>
@@ -194,7 +194,7 @@
             <div class="card-services">
               <img
                 class="icon-services"
-                src="/midtermproject/project-assets/services-section/icons/1.svg"
+                src="project-assets/services-section/icons/1.svg"
               />
               <div class="card-text">
                 <div class="service-title">User Interface Design</div>
@@ -215,7 +215,7 @@
             <div class="card-services">
               <img
                 class="icon-services"
-                src="/midtermproject/project-assets/services-section/icons/2.svg"
+                src="project-assets/services-section/icons/2.svg"
               />
               <div class="card-text">
                 <div class="service-title">User Experience Design</div>
@@ -231,7 +231,7 @@
             <div class="card-services">
               <img
                 class="icon-services"
-                src="/midtermproject/project-assets/services-section/icons/3.svg"
+                src="project-assets/services-section/icons/3.svg"
               />
               <div class="card-text">
                 <div class="service-title">Application Development</div>
