--- a/index-projects.html
+++ b/index-projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/midtermproject/index.css" />
+    <link rel="stylesheet" href="index.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -21,7 +21,7 @@
     <div id="page">
       <section class="topnav">
         <a href="#home" class="active">
-          <img src="/midtermproject/project-assets/logos/circle.svg"
+          <img src="project-assets/logos/circle.svg"
         /></a>
 
         <div id="navbar-menu">
@@ -44,10 +44,7 @@
               <div id="date">2/2/22</div>
             </div>
           </div>
-          <img
-            id="img-article"
-            src="/midtermproject/project-assets/projects-section/1.jpg"
-          />
+          <img id="img-article" src="project-assets/projects-section/1.jpg" />
           <div class="body-20">
             <p class="article-text">
               Simplify is lorem ipsum dolor sit amet, consectetur adipiscing
@@ -81,7 +78,7 @@
           <div class="card">
             <img
               class="img-project"
-              src="/midtermproject/project-assets/projects-section/4.jpg"
+              src="project-assets/projects-section/4.jpg"
             />
             <div class="body-24">Dashcoin</div>
             <p>UI Design</p>
@@ -91,7 +88,7 @@
           <div class="card">
             <img
               class="img-project"
-              src="/midtermproject/project-assets/projects-section/5.jpg"
+              src="project-assets/projects-section/5.jpg"
             />
             <div class="body-24">Vectorify</div>
             <p>User Experience Design</p>
@@ -101,7 +98,7 @@
           <div class="card">
             <img
               class="img-project"
-              src="/midtermproject/project-assets/projects-section/4.jpg"
+              src="project-assets/projects-section/4.jpg"
             />
             <div class="body-24">Orbit</div>
             <p>UI Design</p>
@@ -128,7 +125,7 @@
       <section>
         <div id="footer-container">
           <div id="footer-info">
-            <img src="/midtermproject/project-assets/logos/circle.svg" />
+            <img src="project-assets/logos/circle.svg" />
             <div id="address">
               <p>2972 Westheimer Rd. Santa Ana, Illinois 85486</p>
             </div>
