--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                   is accessible to everyone.
                 </div>
                 <div>
-                  <a href="" class="link-services">Learn Morekkk</a>
+                  <a href="" class="link-services">Learn More</a>
                 </div>
               </div>
             </div>
