--- a/index-projects.html
+++ b/index-projects.html
@@ -29,7 +29,7 @@
           <a href="#projects">Projects</a>
           <a href="#services">Services</a>
         </div>
-        <button id="contact">Contact Us</button>
+        <button id="contact"><a href="contact.html">Contact Us</a></button>
       </section>
       <section>
         <article>
