--- a/index-projects.html
+++ b/index-projects.html
@@ -17,7 +17,7 @@
     />
     <title>Projects</title>
   </head>
-  <body>
+  <body onload="initProjectPage()">
     <div id="page">
       <section class="topnav">
         <a href="#home" class="active">
