--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div id="navbar-menu">
           <div class="navbar-desktop">
             <a class="home-nav" href="#home">Home</a>
-            <a href="index-projects.html">Projects</a>
+            <a href="index-projects.html?project=0">Projects</a>
             <a href="#services">Services</a>
           </div>
           <div class="hamburger">
@@ -44,7 +44,7 @@
       </section>
       <div class="hamburger-links">
         <a class="home-nav" href="#home">Home</a>
-        <a href="index-projects.html">Projects</a>
+        <a href="index-projects.html?project=0">Projects</a>
         <a href="#services">Services</a>
       </div>
       <section id="hero">
